--- a/src/menu/build.gradle
+++ b/src/menu/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:1.5.0-beta2'
     }
 }
 
