--- a/src/menu/app/src/main/AndroidManifest.xml
+++ b/src/menu/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoTitleBar">
+        android:theme="@android:style/Theme.NoTitleBar"
+        android:name="MenuApplication">
         <!--android:theme="@style/AppTheme" >-->
 
         <activity
