--- a/src/menu/app/src/main/AndroidManifest.xml
+++ b/src/menu/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -26,6 +27,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".RegisterAlarm">
+            <intent-filter>
+                <action android:name="net.rivergod.sec.seoulrnd.android.menu.alarm"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 
