support 1campus(A, B, C tower) cefeteria.

--- a/src/menu/app/build.gradle
+++ b/src/menu/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.8.6'
 
     compile 'net.sourceforge.htmlcleaner:htmlcleaner:2.15'
+    compile 'com.tonicartos:superslim:+'
 
 }
