--- a/src/menu/app/src/main/AndroidManifest.xml
+++ b/src/menu/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.rivergod.sec.seoulrnd.android.menu">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -18,7 +17,8 @@
             android:name=".MenuActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:exported="true" >
             <!--android:theme="@style/AppTheme.NoActionBar">-->
 
             <intent-filter>
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".RegisterAlarm">
+        <receiver android:name=".RegisterAlarm" android:exported="true">
             <intent-filter>
                 <action android:name="net.rivergod.sec.seoulrnd.android.menu.alarm"/>
             </intent-filter>
